Clean slate for new design.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Zeus - a novel mobile first grid system.</title>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/enzyme/zeus/v7.0.0/bin/zeus.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:900|Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="bin/index.css">
+    <title></title>
 </head>
-<body class="Body">
-    <!--  -->
+<body>
+
 </body>
 </html>
