Add resources and start new site implementation.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>ZEUS | A novel css grid framework</title>
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Roboto|Oswald" rel="stylesheet">
+    <link rel="stylesheet" href="bin/index.css">
 </head>
 <body>
-
+    <header>
+        <div class="Layout-quick">
+            <div class="Layout__row-quick">
+                <div class="Layout__column-quick Layout__column--text-center">
+                    <img src="images/logo-zeus.svg" alt="ZEUS logo">
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
