Add devices section and move customisation into documentation container.

--- a/index.html
+++ b/index.html
@@ -172,9 +172,39 @@
 
             <div class="Layout__row-quick">
                 <div class="Layout__column-quick Layout__column--lg-8 Layout__column--lg-offset-2 Layout__column--text-center">
-                    <h2>Customization</h2>
-                    <p>Need more columns, different gutter sizes, a larger or smaller layout... or don't like your BEM classes starting with a capital letter, we've got you covered. Here's the variables you can override when using Sass.</p>
-                    <p><strong>Simply check out <a href="#"><code>src/common/variables</code></a> to see what's available.</strong></p>
+                    <h2>All devices</h2>
+                    <p>Designed for mobile first development, ZEUS uses the following default breakpoints to suit a range of screen-sizes and devices, inspired by <a href="">Bootstrap 4</a>.</p>
+                </div>
+            </div>
+
+            <div class="Layout__row-quick">
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--text-center">
+                    <img src="images/icon-xs-device.svg" alt="XS device">
+                    <p>XS: For screen widths less than 544px</p>
+                    <code>.Layout__column--xs-*</code>
+                </div>
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--text-center">
+                    <img src="images/icon-sm-device.svg" alt="XS device">
+                    <p>SM: For screen widths 544px – 767px</p>
+                    <code>.Layout__column--sm-*</code>
+                </div>
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--text-center">
+                    <img src="images/icon-md-device.svg" alt="XS device">
+                    <p>MD: For screen widths 768px — 991px</p>
+                    <code>.Layout__column--md-*</code>
+                </div>
+            </div>
+
+            <div class="Layout__row-quick">
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--lg-offset-2 Layout__column--text-center">
+                    <img src="images/icon-lg-device.svg" alt="XS device">
+                    <p>LG: For screen widths 992px – 1199px</p>
+                    <code>.Layout__column--lg-*</code>
+                </div>
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--text-center">
+                    <img src="images/icon-xl-device.svg" alt="XS device">
+                    <p>XL: For screen widths 1200px and above</p>
+                    <code>.Layout__column--xl-*</code>
                 </div>
             </div>
         </div>
@@ -182,6 +212,14 @@
 
     <section class="Container Container--light">
         <div class="Layout-quick">
+            <div class="Layout__row-quick">
+                <div class="Layout__column-quick Layout__column--lg-8 Layout__column--lg-offset-2 Layout__column--text-center">
+                    <h2>Customization</h2>
+                    <p>Need more columns, different gutter sizes, a larger or smaller layout... or don't like your BEM classes starting with a capital letter, we've got you covered.</p>
+                    <p><strong>Simply check out <a href="#">src/common/variables</a> to see what's available.</strong></p>
+                </div>
+            </div>
+
             <div class="Layout__row-quick">
                 <div class="Layout__column-quick Layout__column--text-center">
                     <h2>Documentation</h2>
