--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="Layout__row-quick">
                 <div class="Layout__column-quick Layout__column--text-center">
-                    <a href="#" class="Button">Download v7.0.0</a>
+                    <a href="#" class="Button">Get started</a>
                 </div>
             </div>
         </div>
@@ -178,30 +178,27 @@
             </div>
 
             <div class="Layout__row-quick">
-                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--text-center">
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--sm-6 Layout__column--lg-4 Layout__column--text-center">
                     <img src="images/icon-xs-device.svg" alt="XS device">
                     <p>XS: For screen widths less than 544px</p>
                     <code>.Layout__column--xs-*</code>
                 </div>
-                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--text-center">
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--sm-6 Layout__column--lg-4 Layout__column--text-center">
                     <img src="images/icon-sm-device.svg" alt="XS device">
                     <p>SM: For screen widths 544px – 767px</p>
                     <code>.Layout__column--sm-*</code>
                 </div>
-                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--text-center">
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--sm-6 Layout__column--lg-4 Layout__column--text-center">
                     <img src="images/icon-md-device.svg" alt="XS device">
                     <p>MD: For screen widths 768px — 991px</p>
                     <code>.Layout__column--md-*</code>
                 </div>
-            </div>
-
-            <div class="Layout__row-quick">
-                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--lg-offset-2 Layout__column--text-center">
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--sm-6 Layout__column--lg-4 Layout__column--lg-offset-2 Layout__column--text-center">
                     <img src="images/icon-lg-device.svg" alt="XS device">
                     <p>LG: For screen widths 992px – 1199px</p>
                     <code>.Layout__column--lg-*</code>
                 </div>
-                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--lg-4 Layout__column--text-center">
+                <div class="Layout__column-quick Layout__column--xs-12 Layout__column--sm-6 Layout__column--sm-offset-3 Layout__column--lg-4 Layout__column--lg-offset-0 Layout__column--text-center">
                     <img src="images/icon-xl-device.svg" alt="XS device">
                     <p>XL: For screen widths 1200px and above</p>
                     <code>.Layout__column--xl-*</code>
@@ -213,20 +210,40 @@
     <section class="Container Container--light">
         <div class="Layout-quick">
             <div class="Layout__row-quick">
-                <div class="Layout__column-quick Layout__column--lg-8 Layout__column--lg-offset-2 Layout__column--text-center">
-                    <h2>Customization</h2>
-                    <p>Need more columns, different gutter sizes, a larger or smaller layout... or don't like your BEM classes starting with a capital letter, we've got you covered.</p>
-                    <p><strong>Simply check out <a href="#">src/common/variables</a> to see what's available.</strong></p>
-                </div>
-            </div>
-
-            <div class="Layout__row-quick">
                 <div class="Layout__column-quick Layout__column--text-center">
                     <h2>Documentation</h2>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="Container Container--dark">
+        <div class="Layout-quick">
+            <div class="Layout__row-quick">
+                <div class="Layout__column-quick Layout__column--lg-8 Layout__column--lg-offset-2 Layout__column--text-center">
+                    <h2>Customization</h2>
+                    <p>Need more columns, different gutter sizes, a larger or smaller layout... or don't like your BEM classes starting with a capital letter? We've got you covered.</p>
+                    <p><strong>Simply check out <a href="#">src/common/variables</a> to see what's available to tweak.</strong></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="Footer">
+        <div class="Layout-quick">
+            <div class="Layout__row-quick">
+                <div class="Layout__column-quick Layout__column--text-center">
+                    <a href="#" class="Button">Get started</a>
+                </div>
+            </div>
+            <div class="Layout__row-quick">
+                <div class="Layout__column-quick Layout__column--text-center">
+                    <p>Created by <a href="">Tristan Strathearn</a>. Open source under the <a href="">MIT license</a>.</p>
+                    <p>Designed by <a href="">Thomas Butler</a>. Images thanks to <a href="">Unplash</a>.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.rawgit.com/enzyme/qoob/master/dist/qoob.js"></script>
     <script>
